2012-10-22 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdPrepMain): Use AND to connect
	cd commadn to CygbuildPatchApplyMaybe.

2012-10-20 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallFinishMessage): Don't
	display message in GBS mode.

2012-10-13 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/data/python-2.6.8.lst: New.

2012-10-11 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallExtraDirsFile): remove
	sub shell call and use $retval.
	(CygbuildCmdInstallList): Correct mkdir if-case.
	(CygbuildCmdConfAutomake): Adjust quotes.

2012-10-10 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/dirs.ex: New.

	* bin/lib/cygbuild.pl:
	(Help::OPTIONAL EXTERNAL FILES::mime, dirs): New.
	(Help::OPTIONAL EXTERNAL FILES::install.lst): Document mkdir.

	* bin/template/install.lst.ex: Add mkdir example.

	* bin/cygbuild.sh (CygbuildCmdConfMain): Adjust message.
	(CygbuildCmdInstallList): Add mkdir support.
	(CygbuildConfCC): rm config.cache
	(CygbuildInstallExtraMimeFile): Use $INSTALL_FILE_MODES.
	(CygbuildInstallExtraDirsFile): New.

	* bin/template/test.sh.ex: (Run): Accept empty message.

2012-10-09 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/mime.ex: New.

	* bin/cygbuild.sh (CygbuildInstallExtraMimeFiles): New.
	(CygbuildDefineGlobalMain): Add FILE_INSTALL_MIME, rename
	FILE_INSTALL_LST.

2012-10-08 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildDllToLibName): Correct libmagic1.
	(CygbuildConfCC): Make $conf file executable.

2012-10-07 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh (CygbuildCmdInstallCheckManualPages): find
	also symlinked manual pages.

	* bin/cygbuild.sh (CygbuildDllToLibName): Add gnome libs.
	(CygbuildInstallFixManSymlinks): New.

2012-10-04 Thu  Jari Aalto  <jari.aalto@cante.net>

	* TODO: Minor udpates.

	* README: Minor adjustments.

	* INSTALL: Add install-symlinks choice.
