@@ -2,6 +2,7 @@
 
 	* bin/cygbuild.sh (CygbuildCmdPrepMain): Use AND to connect
 	cd commadn to CygbuildPatchApplyMaybe.
+	(CygbuildCheckRunDir): No checking in CygbuildIsGbsCompat mode.
 
 2012-10-20 Sat  Jari Aalto  <jari.aalto@cante.net>
 
